# CS-Work

./: .gitignore  README.md
1stSemester/: p2.py
1stSemester/Assembly/asm23/: asm23.sln
1stSemester/FundamentalsOfProgramming/A1/: p1.py  p3.py
2ndSemester/DataStructures/: SDA1.txt
2ndSemester/DataStructures/Lab2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp  ShortTest.h
2ndSemester/DataStructures/Lab3/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
2ndSemester/DataStructures/Lab4/: App.cpp  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
2ndSemester/DataStructures/Lab5/: App.cpp  CMakeLists.txt  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
2ndSemester/DynamicalSystems/: DynamicalSystems.txt
2ndSemester/GraphAlgorithms/Lab1/: Documentation graph.docx
2ndSemester/GraphAlgorithms/Lab5/: errors.py  main.py  tests.py  undirected.py
2ndSemester/ObjectOrientedProgramming/E/: CMakeLists.txt  Post.cpp  Post.h  Topic.cpp  Topic.h  User.cpp  User.h  main.cpp
2ndSemester/ObjectOrientedProgramming/Lab3-4/: CMakeLists.txt  README.md
2ndSemester/ObjectOrientedProgramming/Lab3-4/array/: array.c  array.h
2ndSemester/ObjectOrientedProgramming/Lab3-4/domain/: domain.c  domain.h
2ndSemester/ObjectOrientedProgramming/Lab3-4/main/: main.c
2ndSemester/ObjectOrientedProgramming/Lab3-4/repo/: repository.c  repository.h
2ndSemester/ObjectOrientedProgramming/Lab3-4/service/: service.c  service.h
2ndSemester/ObjectOrientedProgramming/Lab3-4/testing/: tests.c  tests.h
2ndSemester/ObjectOrientedProgramming/Lab3-4/ui/: ui.c  ui.h
2ndSemester/ObjectOrientedProgramming/Lab3-4/validation/: validation.c  validation.h
2ndSemester/ObjectOrientedProgramming/Lab5-6/: CMakeLists.txt
2ndSemester/ObjectOrientedProgramming/Lab5-6/array/: Array.h
2ndSemester/ObjectOrientedProgramming/Lab5-6/domain/: domain.cpp  domain.h
2ndSemester/ObjectOrientedProgramming/Lab5-6/main/: main.cpp
2ndSemester/ObjectOrientedProgramming/Lab5-6/repo/: repository.cpp  repository.h
2ndSemester/ObjectOrientedProgramming/Lab5-6/service/: service.cpp  service.h
2ndSemester/ObjectOrientedProgramming/Lab5-6/tests/: tests.cpp  tests.h
2ndSemester/ObjectOrientedProgramming/Lab5-6/ui/: Ui.cpp  Ui.h
2ndSemester/ObjectOrientedProgramming/Lab5-6/validation/: validation.cpp  validation.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/: CMakeLists.txt  admin_read.txt  admin_save.txt  comparator.cpp  comparator.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/array/: Array.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/domain/: domain.cpp  domain.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/errors/: exceptions.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/main/: main.cpp
2ndSemester/ObjectOrientedProgramming/Lab8-9/repo/: repository.cpp  repository.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/service/: service.cpp  service.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/tests/: tests.cpp  tests.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/ui/: Ui.cpp  Ui.h
2ndSemester/ObjectOrientedProgramming/Lab8-9/validation/: validation.cpp  validation.h
2ndSemester/ObjectOrientedProgramming/T1/: CMakeLists.txt  domain.cpp  domain.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  tests.cpp  tests.h  ui.cpp  ui.h
2ndSemester/ObjectOrientedProgramming/T2/: CMakeLists.txt  client.cpp  client.h  company.cpp  company.h  dwelling.cpp  dwelling.h  main.cpp  person.cpp  person.h  service.cpp  service.h  something.txt  ui.cpp  ui.h
2ndSemester/OperatingSystems/: Exam Prep.txt  Os test.txt  PuttyXD.txt  processes.txt
2ndSemester/OperatingSystems/practic_work/: example1.sh  example2.sh  example3.sh  example4.sh  example5.sh  example6.sh  example6.sh.save
3rdSemester/AdancedProgrammingMethods/TheToyLanguage/: 1.txt  2.txt  3.txt  7.txt
3rdSemester/Computer networks/: udp_client.py
3rdSemester/ComputerNetworks/: client.py  ipnm.txt  lab1client.py
3rdSemester/Data Bases/Query's/: GSM - DataBase.sql  GSM HW 3.sql  GSM HW 4.1.sql  GSM HW 5.sql  Part1_Exam.sql  Part2_Exam.sql
3rdSemester/Data Bases/db/: 101.session
3rdSemester/DataBases/Query's/: GSM HW 2.sql  Practic.sql  Practical Func.sql  Practical Main.sql
3rdSemester/DataBases/db/: db.prj
3rdSemester/English/: EyeResearch.docx
3rdSemester/LogicalFunctionalProgramming/Prolog/: 8.pl  8_p3.pl  Seminar2.pl  p1_15a.pl  p1_15b.pl  p2_15a.pl  p2_15a.pl~  test.pl
3rdSemester/PLF/Lisp/: test.lisp
3rdSemester/PLF/Prolog/: 8.pl~  8_p3.pl~  Seminar2.pl~  p1_15a.pl~  p1_15b.pl~
3rdSemester/Probablities & Statistics/: C1.m  C3.m  lab5.m  lab6_2.m  secondtest.m  test.m
3rdSemester/ProbablitiesStatistics/: C2.m  lab6.m  practical.m
4thSemester/ArtificialIntelligence/: AI_lab_11_2023.ipynb  AI_lab_12_2023.ipynb  AI_lab_13_2023.ipynb  AI_lab_4_2023.ipynb  AI_lab_5_2023.ipynb  AI_lab_8_2023.ipynb  Lab_10_2023.ipynb
4thSemester/ArtificialIntelligence/Lab2/: AI_lab_2_2023.ipynb
4thSemester/ArtificialIntelligence/Lab3/: Lab3_AI_2023_unsolved.ipynb
4thSemester/DatabaseManagementSystems/DBMSLab/: DBMSLab.csproj  DBMSLab.sln  Form1.Designer.cs  Form1.cs  Program.cs
4thSemester/DatabaseManagementSystems/DBMSLab2/: App.config  DBMSLab2.csproj  DBMSLab2.sln  Form1.Designer.cs  Form1.cs  Program.cs
4thSemester/SoftwareEngineering/: Actors+UseCases.docx  TestingDiagrams.xlsx  umlDiagram.drawio  useCaseDiagram.drawio
5thSemester/: p1.alen
5thSemester/CellularApplicationProgramming/: idea.txt
5thSemester/ParallelDistributedProgramming/Lab7/: CMakeLists.txt  main.cpp
5thSemester/ParallelDistributedProgramming/Lab8/: CMakeLists.txt  main.cpp
6thSemester/BachelorThesis/: Assignment1_ThemeTitleAgreement.docx  Emergency.txt  Main Idea.txt  Refferences.txt
6thSemester/BachelorThesis/Thesis/EDIConverter/: CMakeLists.txt  config.json  main.cpp  mapping.xsl
(+899 files in other folders)
